Native implementations for encode/decode

--- a/rapidopus-java/build.gradle
+++ b/rapidopus-java/build.gradle
@@ -36,3 +36,15 @@ repositories {
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
+
+processResources {
+    dependsOn ":rapidopus-natives:assemble"
+}
+
+sourceSets {
+    main {
+        resources {
+            srcDirs 'src/main/resources', project(":rapidopus-natives").buildDir.getAbsolutePath() + '/lib/main/debug'
+        }
+    }
+}
