--- a/examples/build.gradle
+++ b/examples/build.gradle
@@ -11,5 +11,7 @@ repositories {
 }
 
 dependencies {
+    implementation project(":rapidopus-java")
+
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
