--- a/examples/build.gradle
+++ b/examples/build.gradle
@@ -2,9 +2,7 @@ plugins {
     id 'java'
 }
 
-version 'unspecified'
-
-sourceCompatibility = 1.8
+sourceCompatibility = JavaVersion.VERSION_1_9
 
 repositories {
     mavenCentral()
@@ -12,6 +10,4 @@ repositories {
 
 dependencies {
     implementation project(":rapidopus-java")
-
-    testCompile group: 'junit', name: 'junit', version: '4.12'
 }
